Fix layout issue in Flickr image gallery posts on small screens

--- a/_sass/components/modules/_gallery.scss
+++ b/_sass/components/modules/_gallery.scss
@@ -7,8 +7,8 @@
 .gallery {
   padding: 0;
   list-style-type: none;
-  float: left;
   width: 100%;
+  overflow: hidden;
 }
 
 .gallery li {
